# scruffy-the-monster

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  README.rst  crud.py  database.py  defaults.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  schemas.py  server.py  sploit.py  swagger.yaml
config/: defaults.py
db/: database.py  models.py
handlers/: crud.py  schemas.py
sploit/: sploit.py
