[tool.poetry]
name = "scruffy-the-monster"
version = "0.1.0"
description = "Test Game-Application to Show Race Condition in Action"
authors = ["Anton Nikolaev"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "3.6.2"
aiohttp-security = "0.4.0"
aiohttp-session = "2.9.0"
aiohttp-swagger = "1.0.14"
async-timeout = "3.0.1"
attrs = "19.3.0"
chardet = "3.0.4"
idna = "2.9"
Jinja2 = "2.11.3"
MarkupSafe = "1.1.1"
multidict = "4.7.5"
outcome = "1.0.1"
pydantic = "1.4"
PyYAML = "5.3"
Represent = "1.6.0"
six = "1.14.0"
SQLAlchemy = "1.3.15"
sqlalchemy-aio = "0.15.0"
yarl = "1.4.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
asyncio_pool = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
